--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">-->
     <!--<link rel="profile" href="http://gmpg.org/xfn/11">-->
-    <link href="/projects/bootstrap3.3.7/css/style.css" rel="stylesheet">
+    <link href="./css/style.css" rel="stylesheet">
     <!--[if lt IE 9]>
     <!--<script src="<?php echo esc_url( get_template_directory_uri() ); ?>/js/html5.js"></script>-->
     <!--<![endif]&ndash;&gt;-->
