--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 left_bar">
             <div class="row avatar">
-                <img src="/projects/bootstrap3.3.7/img/linux.svg" alt="">
+                <img src="./img/linux.svg" alt="">
             </div>
             <div class="row contacts">
                 <div class="contact phone">
@@ -280,12 +280,12 @@
                 </div>
 
                 <div class="flex-one">
-                    <div class="flex-img"><img src="/projects/bootstrap3.3.7/img/swimming.png"/></div>
+                    <div class="flex-img"><img src="./img/swimming.png"/></div>
                     <div class="flex-hed"><h4>Swimming</h4></div>
                 </div>
 
                 <div class="flex-one">
-                    <div class="flex-img"><img src="/projects/bootstrap3.3.7/img/bowling.png"/></div>
+                    <div class="flex-img"><img src="./img/bowling.png"/></div>
                     <div class="flex-hed"><h4>Bowling Pins</h4></div>
                 </div>
 
